# Roast-My-Resume

./: README.md  main.py  old.py  pyproject.toml
roast-my-resume/: package-lock.json  package.json
roast-my-resume/app/: globals.css  page.tsx
