[project]
name = "roast-my-resume"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipywidgets>=8.1.7",
    "openai-agents>=0.2.11",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "uvicorn>=0.35.0",
]
